ansible_scripts/roles/install_apps/edgenius/assetdb-api/files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edgenius
  name: assetdbapi
  labels:
    app: assetdbapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assetdbapi
  template:
    metadata:
      labels:
        app: assetdbapi
    spec:
      containers:
        - name: assetdbapi
          image: griffins.azurecr.io/edge-demo-assetdb-api:1.0.9
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: griffinsreg
