ansible_scripts/roles/install_apps/edgenius/assetdb-api/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assetdbapi
  namespace: edgenius
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /assetdbapi(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: assetdbapi
              port:
                number: 80
